@@ -106,21 +106,17 @@ def main():
         # Add as many explored runs as individuals that need to be evaluated
         traj.f_expand(cartesian_product({'generation': [g], 'ind_idx': range(len(eval_pop))}))
 
-        fitnesses = toolbox.map(toolbox.evaluate, eval_pop)  # evaluate using our fitness function
-
-        index_range = traj.f_get('ind_idx').f_get_range()
-        # fitnesses is a list of
+        fitnesses_results = toolbox.map(toolbox.evaluate, eval_pop)  # evaluate using our fitness function
+        # fitnesses_results is a list of
         # a nested tuple: [(run_idx, (fitness,)), ...]
-        for run_idx, fitness in fitnesses:
-            # Update fitnesses
-            pop_idx = index_range[run_idx]
-            # Results are in order of completion not runs,
-            # so we need to convert the run indices to population indices
-            eval_pop[pop_idx].fitness.values = fitness
+        for idx, result in enumerate(fitnesses_results):
+            # Update fitnesses_results
+            _, fitness = result  # The environment returns tuples: [(run_idx, run), ...]
+            eval_pop[idx].fitness.values = fitness
 
-        print("  Evaluated %i individuals" % len(fitnesses))
+        print("  Evaluated %i individuals" % len(fitnesses_results))
 
-        # Gather all the fitnesses in one list and print the stats
+        # Gather all the fitnesses_results in one list and print the stats
         fits = [ind.fitness.values[0] for ind in pop]
 
         length = len(pop)
